clean up file structure

--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
 		<title>
 			STL Viewer
 		</title>
-		<link rel="stylesheet" type="text/css" media="all" href="./style.css" /> 
+		<link rel="stylesheet" type="text/css" media="all" href="./css/style.css" /> 
 	</head>
 	<body>
 		<div id="canvasContainer">
 			<canvas id="renderCanvas"></canvas>
 		</div>
 		
-		<script type="text/javascript" src="./matrix.js"></script>
-		<script type="text/javascript" src="./vertexshader.js"></script>
-		<script type="text/javascript" src="./fragmentshader.js"></script>
-		<script type="text/javascript" src="./gl.js"></script>
-		<script type="text/javascript" src="./controls.js"></script>
-		<script type="text/javascript" src="./viewer.js"></script>
+		<script type="text/javascript" src="./js/matrix.js"></script>
+		<script type="text/javascript" src="./js/shaders/vertexshader.js"></script>
+		<script type="text/javascript" src="./js/shaders/fragmentshader.js"></script>
+		<script type="text/javascript" src="./js/gl.js"></script>
+		<script type="text/javascript" src="./js/controls.js"></script>
+		<script type="text/javascript" src="./js/viewer.js"></script>
 	</body>		
 </html>
 
